src/objects/LBI__AccountExtension__c.object
<CustomObject>
    <description>Contains extra information about the Account at Lattice Engines.</description>
    <fields>
        <fullName>LBI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lattice Account Extensions</relationshipLabel>
        <relationshipName>AccountExtensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__Generic100__c</fullName>
        <label>Generic 100</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Generic101__c</fullName>
        <label>Generic 101</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Generic102__c</fullName>
        <label>Generic 102</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__HolderBoolean__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the dynamic output of fields in account extension.</description>
        <label>Holder Boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__HolderCurrency__c</fullName>
        <label>Holder Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LBI__HolderDatetime__c</fullName>
        <description>Used in the dynamic output of fields in account extension.</description>
        <label>Holder Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__HolderNumber__c</fullName>
        <description>Used in the dynamic output of fields in account extension.</description>
        <label>Holder Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__HolderString__c</fullName>
        <description>Used in the dynamic output of fields in account extension.</description>
        <label>Holder String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeAccountId__c</fullName>
        <label>Lattice Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lattice Account Extension</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__Account__c</columns>
        <columns>LBI__Contact__c</columns>
        <columns>LBI__ExternalId__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>LBI__LatticeAccountId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LAE-{00000000}</displayFormat>
        <label>Account Extension Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Account Extensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LBI__Contact_Or_Account_Not_Both</fullName>
        <active>true</active>
        <description>Ensures that only Account or Contact relationships are populated, never both.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(LBI__Account__c))
,
NOT(ISBLANK(LBI__Contact__c))
)</errorConditionFormula>
        <errorMessage>Account or Contact can be entered, but not both.</errorMessage>
    </validationRules>
</CustomObject>